# django-prod

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/django_prod/: __init__.py  generator.py  urls.py  views.py
src/django_prod/management/commands/: django_prod_deploy.py  django_prod_init.py
src/django_prod/templates/boilerplate/: docker-compose.yaml.txt  entrypoint.prod.sh.txt  requirements.txt  settings_prod.py.txt
src/django_prod/templates/django_prod/: welcome.html
